# SeedRust

./: Cargo.toml  Makefile.toml  README.md  vercel.json
src/: api.rs  app.rs  lib.rs  route.rs  types.rs
src/components/: atc_button.rs  mod.rs  navbar.rs  product_card.rs
src/pages/: home.rs  product_detail.rs
static/: index.html  package.json  styles.css  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
static/products/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  products.json
